--- a/index.html
+++ b/index.html
@@ -3,74 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Profile</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #007acc;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        section {
-            padding: 20px;
-            margin: 10px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #007acc;
-            color: white;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-        .social-links a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: white;
-        }
-    </style>
+    <title>Sai Teja Aligeri Venkata - Profile</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <!-- Header -->
+    <header class="bg-primary text-white text-center py-5">
         <h1>Sai Teja Aligeri Venkata</h1>
-        <p>Site Reliability Engineer</p>
+        <p class="lead">Site Reliability Engineer</p>
     </header>
-    <main>
-        <section>
-            <h2>About Me</h2>
-            <p>Experienced Technical Production Support Engineer with expertise in managing and supporting application performance in production environments. Demonstrated proficiency in troubleshooting, root cause analysis (RCA), and resolving incident tickets by leveraging a comprehensive understanding of end-to-end application flows. Hands-on experience with Google Cloud Platform (GCP), adept at managing applications that support high-volume production traffic. Skilled in utilizing a wide range of GCP resources including GKE, GCE, Monitoring & Logging, BigQuery, Spanner, Cloud Storage, Dataflow, Dataproc, Cloud SQL, Pub/Sub, and more. Skilled in database management with Cassandra, DB2, and Oracle DB, as well as monitoring tools like Splunk and Dynatrace to ensure system stability and performance. Strong ability to ensure system stability, optimize application performance, and provide seamless production support.</p>
+
+    <!-- Main Content -->
+    <main class="container mt-5">
+        <!-- About Me Section -->
+        <section id="about" class="mb-5">
+            <h2 class="text-primary">About Me</h2>
+            <p>
+                Experienced Technical Production Support Engineer with expertise in managing and supporting application performance in production environments.
+                Demonstrated proficiency in troubleshooting, root cause analysis (RCA), and resolving incident tickets by leveraging a comprehensive understanding of end-to-end application flows.
+                Hands-on experience with Google Cloud Platform (GCP), adept at managing applications that support high-volume production traffic. Skilled in utilizing a wide range of GCP resources including GKE, GCE, Monitoring & Logging, BigQuery, Spanner, Cloud Storage, Dataflow, Dataproc, Cloud SQL, Pub/Sub, and more.
+                Skilled in database management with Cassandra, DB2, and Oracle DB, as well as monitoring tools like Splunk and Dynatrace to ensure system stability and performance.
+                Strong ability to ensure system stability, optimize application performance, and provide seamless production support.
+            </p>
         </section>
-        <section>
-            <h2>Skills</h2>
-            <ul>
-                <li>Observability & Monitoring</li>
-                <li>Cloud Engineering (GCP)</li>
-                <li>DevOps/SRE</li>
+
+        <!-- Skills Section -->
+        <section id="skills" class="mb-5">
+            <h2 class="text-primary">Skills</h2>
+            <ul class="list-group">
+                <li class="list-group-item">Observability & Monitoring</li>
+                <li class="list-group-item">Cloud Engineering (GCP)</li>
+                <li class="list-group-item">DevOps/SRE</li>
             </ul>
         </section>
-        <section>
-            <h2>Contact</h2>
-            <p>Email: aligerisai94@gmail.com</p>
+
+        <!-- Contact Section -->
+        <section id="contact" class="mb-5">
+            <h2 class="text-primary">Contact</h2>
+            <p>Email: <a href="mailto:aligerisai94@gmail.com">aligerisai94@gmail.com</a></p>
         </section>
     </main>
-    <footer>
-        <p>Connect with me: 
-            <span class="social-links">
-                <a href="https://www.linkedin.com/in/avsaiteja/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | 
-                <a href="https://github.com/saitejaaligeri" target="_blank" rel="noopener noreferrer">GitHub</a>
-            </span>
-        </p>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3">
+        <p>Connect with me:</p>
+        <div>
+            <a href="https://www.linkedin.com/in/avsaiteja/" target="_blank" rel="noopener noreferrer" class="text-white mx-2">
+                LinkedIn
+            </a> |
+            <a href="https://github.com/saitejaaligeri" target="_blank" rel="noopener noreferrer" class="text-white mx-2">
+                GitHub
+            </a>
+        </div>
     </footer>
+
+    <!-- Bootstrap JS (Optional, for interactive components) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
