--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
     <title>Sai Teja Aligeri Venkata - Profile</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Sai Teja</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <!-- Header -->
-    <header class="bg-primary text-white text-center py-5">
+    <header class="bg-primary text-white text-center py-5 custom-header">
         <h1>Sai Teja Aligeri Venkata</h1>
         <p class="lead">Site Reliability Engineer</p>
     </header>
@@ -21,10 +46,6 @@
             <h2 class="text-primary">About Me</h2>
             <p>
                 Experienced Technical Production Support Engineer with expertise in managing and supporting application performance in production environments.
-                Demonstrated proficiency in troubleshooting, root cause analysis (RCA), and resolving incident tickets by leveraging a comprehensive understanding of end-to-end application flows.
-                Hands-on experience with Google Cloud Platform (GCP), adept at managing applications that support high-volume production traffic. Skilled in utilizing a wide range of GCP resources including GKE, GCE, Monitoring & Logging, BigQuery, Spanner, Cloud Storage, Dataflow, Dataproc, Cloud SQL, Pub/Sub, and more.
-                Skilled in database management with Cassandra, DB2, and Oracle DB, as well as monitoring tools like Splunk and Dynatrace to ensure system stability and performance.
-                Strong ability to ensure system stability, optimize application performance, and provide seamless production support.
             </p>
         </section>
 
@@ -49,16 +70,12 @@
     <footer class="bg-dark text-white text-center py-3">
         <p>Connect with me:</p>
         <div>
-            <a href="https://www.linkedin.com/in/avsaiteja/" target="_blank" rel="noopener noreferrer" class="text-white mx-2">
-                LinkedIn
-            </a> |
-            <a href="https://github.com/saitejaaligeri" target="_blank" rel="noopener noreferrer" class="text-white mx-2">
-                GitHub
-            </a>
+            <a href="https://www.linkedin.com/in/avsaiteja/" target="_blank" rel="noopener noreferrer" class="text-white mx-2">LinkedIn</a> |
+            <a href="https://github.com/saitejaaligeri" target="_blank" rel="noopener noreferrer" class="text-white mx-2">GitHub</a>
         </div>
     </footer>
 
-    <!-- Bootstrap JS (Optional, for interactive components) -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
